<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dimen_10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottomdialog_share"
        android:orientation="vertical">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/hsv_first"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_maopao"
                    android:layout_width="70dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/ic_maopao"
                    android:gravity="center"
                    android:text="@string/hail_fellow"
                    android:textColor="@color/textColorThirdary"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:id="@+id/tv_weixin_friend"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/ic_weixin"
                    android:gravity="center"
                    android:text="@string/weixin_friend"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:id="@+id/tv_weixin_circle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/ic_weixin_circle"
                    android:gravity="center"
                    android:text="@string/weixin_circle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:id="@+id/tv_sina_weibo"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/ic_sina"
                    android:gravity="center"
                    android:text="@string/sina_weibo"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_13sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_qq"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/ic_qq"
                    android:gravity="center"
                    android:text="@string/qq"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_13sp" />

                <TextView
                    android:id="@+id/tv_qq_qzone"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/ic_qzone"
                    android:gravity="center"
                    android:text="@string/qq_qzone"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_13sp" />
            </LinearLayout>

        </HorizontalScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_15dp"
            android:id="@+id/view_line"
            android:background="@color/color_10_black"
            android:visibility="visible" />

        <HorizontalScrollView
            android:id="@+id/hsv_second"
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="120dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:background="@drawable/bg_bottomdialog_share"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_collection"
                    android:layout_width="70dp"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/selector_mapgo_event_collect"
                    android:gravity="center"
                    android:text="@string/collection"
                    android:textColor="@color/textColorThirdary"
                    android:textSize="@dimen/text_size_12sp" />



                <TextView
                    android:id="@+id/tv_report"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/mapgo_report_black"
                    android:gravity="center"
                    android:text="@string/report"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_12sp" />

                <TextView
                    android:id="@+id/tv_note"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/mapgo_remark_black"
                    android:gravity="center"
                    android:text="@string/tv_note"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_12sp" />

                <TextView
                    android:id="@+id/tv_shield"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/mapgo_defriend_black"
                    android:gravity="center"
                    android:text="@string/shield"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_12sp" />
                <TextView
                    android:id="@+id/tv_delete"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/dimen_10dp"
                    android:drawableTop="@drawable/mapgo_delete_black"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_12sp" />

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:background="@drawable/bg_bottomdialog_share"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/textColorSecondary"
            android:textSize="@dimen/text_size_18sp" />

    </LinearLayout>
</LinearLayout>